tests/language_modules/04_types/valid/primitive_type_aliases.vf
module TypeExamples

type Money is Integer
type Flag is Boolean
type Ratio is Double
type Label is String

function default_money() returns Money
is
    return 0
end default_money

end TypeExamples