tests/language_modules/04_types/invalid_semantics/type_function_name_collision.vf
module TypeFunctionNameCollision

type Money is Integer

function Money() returns Integer
is
    return 0
end Money

end TypeFunctionNameCollision